Fix image pushing off screen

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 .first-card {
     display: flex;
     background-color: #1F2937;
+    padding: 56px;
 }
 
 .first-card-left {
@@ -34,6 +35,7 @@
     margin-left: 56px;
     margin: 0;
     padding: 0;
+    padding-right: 24px;
 
 }
 
@@ -42,7 +44,6 @@ h1 {
     font-weight: bolder;
     font-size: 48px;
     color: #F9FAF8;
-    margin-left: 56px;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -51,12 +52,12 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     color: #E5E7EB;
     font-size: 18px;
-    margin-left: 56px;
 }
 
 .first-card-image {
     margin-right: 56px;
-    width: 100%
+    width: 45%;
+    height: 45%;
 }
 
 .sign.up.container {
@@ -64,7 +65,6 @@ h1 {
 }
 
 .button {
-    margin-left: 56px;
     border: none;
     background-color: #2882F6;
     color: white;
